# clistrap

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  cargo-generate.toml  clistrap.example.toml
src/: cli.rs  config.rs  main.rs  output.rs
src/auth/: mod.rs  pkce.rs  provider.rs  store.rs
src/commands/: auth.rs
