[package]
name = "clistrap"
version = "0.1.0"
edition = "2024"
description = "Enterprise CLI framework template with Entra ID SSO - fork and build your internal CLI"
repository = "https://github.com/amaanax86/clistrap"
keywords = ["cli", "enterprise", "auth", "sso", "template"]
categories = ["command-line-utilities", "authentication"]

[[bin]]
name = "clistrap"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "cargo"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
colored = "2"
open = "5"
tiny_http = "0.12"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
urlencoding = "2"
